--- a/langListingMonokai.tex
+++ b/langListingMonokai.tex
@@ -18,7 +18,7 @@
   stepnumber=1,                   		% the step between two line-numbers.        
   numbersep=5pt,                  		% how far the line-numbers are from the code
   extendedchars=true,
-  numberstyle=\tiny\color{black}\ttfamily,
+  numberstyle=\scriptsize\color{black}\ttfamily,
   backgroundcolor=\color{background},  		% choose the background color. You must add \usepackage{color}
   showspaces=false,               		% show spaces adding particular underscores
   showstringspaces=false,         		% underline spaces within strings
@@ -30,13 +30,13 @@
   breaklines=true,                		% sets automatic line breaking
   breakatwhitespace=true,         		% sets if automatic breaks should only happen at whitespace
   title=\lstname,                 		% show the filename of files included with \lstinputlisting;
-  basicstyle=\color{normal}\tiny\ttfamily,					% sets font style for the code
-  keywordstyle=\color{magenta}\tiny\ttfamily,	% sets color for keywords
-  stringstyle=\color{string}\tiny\ttfamily,		% sets color for strings
-  commentstyle=\color{comment}\tiny\ttfamily,	% sets color for comments
+  basicstyle=\color{normal}\scriptsize\ttfamily,					% sets font style for the code
+  keywordstyle=\color{magenta}\scriptsize\ttfamily,	% sets color for keywords
+  stringstyle=\color{string}\scriptsize\ttfamily,		% sets color for strings
+  commentstyle=\color{comment}\scriptsize\ttfamily,	% sets color for comments
   emph={True, False, format_string, eff_ana_bf, permute, eff_ana_btr, KeyError,
   ValueError, ZeroDivisionError},
-  emphstyle=\color{identifier}\tiny\ttfamily,
+  emphstyle=\color{identifier}\scriptsize\ttfamily,
   morekeywords={with, as}
 }
 
