--- a/lec-01/lec-1.tex
+++ b/lec-01/lec-1.tex
@@ -42,9 +42,13 @@
 -K모 교수-
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
 \frametitle{문제 0/10}
-제 이름은?
+다음 코드를 시행한 결과는?
+\begin{lstlisting}
+lst = list(range(100))
+print(lst[0], lst[-1], len(lst[3:10]))
+\end{lstlisting}
 \end{frame}
 
 \begin{frame}[fragile]
