--- a/lec-01/lec-1.tex
+++ b/lec-01/lec-1.tex
@@ -109,7 +109,7 @@ def f(arr):
 
 \begin{frame}[fragile]{스타트업 이야기를 좀 해보아요}
 \begin{lstlisting}
-print('START-UP'.araboza())
+print('STARTUP'.araboza())
 \end{lstlisting}
 \end{frame}
 
